--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,8 +56,8 @@ header::before {
   left: 0;
   z-index: -1;
 
-  width: 100vw;
-  height: max(200px, 25vh);
+  width: 100%;
+  height: max(300px, 25vh);
 
   background-image: linear-gradient(
       135deg,
@@ -79,6 +79,8 @@ header::before {
 }
 
 main {
+  --item-padding: 1.5rem;
+
   position: relative;
 
   top: calc(-1 * var(--header-overlap));
@@ -141,13 +143,16 @@ a.active {
 
   align-items: flex-end;
 
-  padding: 1rem;
+  padding: var(--item-padding);
+
+  overflow: hidden;
 }
 
 .checkbox {
   display: inline-block;
 
-  margin-right: 0.5rem;
+  margin-right: 1rem;
+  flex-shrink: 0;
   border: 3px solid var(--clr-normal-200);
   width: 1.5rem;
   aspect-ratio: 1 / 1;
@@ -225,11 +230,13 @@ a.active {
   align-items: flex-end;
   justify-content: space-between;
 
-  padding: 1rem;
+  padding: var(--item-padding);
 }
 
 .task {
   border-bottom: 1px solid var(--clr-normal-200);
+
+  animation: expand 300ms;
 }
 
 .task-description {
@@ -239,6 +246,7 @@ a.active {
 }
 
 .checkbox:checked + .task-description {
+  color: var(--clr-normal-200);
   text-decoration: line-through;
 }
 
@@ -248,6 +256,7 @@ a.active {
   align-self: center;
 
   width: 1.25rem;
+  flex-shrink: 0;
   aspect-ratio: 1 / 1;
 
   background-color: var(--clr-normal-200);
@@ -268,7 +277,7 @@ a.active {
   padding: 0;
 
   list-style: none;
-  transform: translate(-50%, calc(-1 * (100% + 1rem)));
+  transform: translate(-50%, calc(-1 * (100% + var(--item-padding))));
 }
 
 .nav-list-wrapper li {
@@ -290,6 +299,16 @@ a.active {
   }
   100% {
     transform: scale(0.6);
+  }
+}
+
+@keyframes expand {
+  0% {
+    padding: 0 var(--item-padding);
+  }
+
+  100% {
+    padding: var(--item-padding);
   }
 }
 
